Added addToCart openapi comments, removed the use of user shop id when creating a cart order, use pivot total on removeFromCart method, updated checkout method and added its open api comment
