# app/Http/Controllers/api/OrderController.php
@@ -11,7 +11,44 @@ use Illuminate\Http\Request;
 
 class OrderController extends Controller
 {
-
+    /**
+     * @OA\Post(
+     *      path="/cart/add",
+     *      operationId="addToCart",
+     *      tags={"Cart"},
+     *      security={ {"sanctum": {} }},
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              required={
+     *                  "product_id",
+     *                  "quantity",
+     *              },
+     *              @OA\Property(property="product_id", type="integer", format="integer", example="1"),
+     *              @OA\Property(property="quantity", type="integer", format="integer", example="1"),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="order", type="object", description="Order object."),
+     *          ),
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
     public function addToCart(Request $request)
     {
         $request->validate([
@@ -30,11 +67,10 @@ class OrderController extends Controller
         $product = Product::find($request->product_id);
         $total = $request->quantity * $product->price;
 
-
         if (!$order) {
             $order = new Order();
             $order->user_id = $user->id;
-            $order->shop_id = $user->shop_id;
+            $order->shop_id = $product->shop_id;
             $order->status_id = $statusInCart->id;
             $order->total = 0;
             $order->save();
@@ -74,7 +110,7 @@ class OrderController extends Controller
         $product = $order->products()->find($request->product_id);
 
         $order->products()->detach($product->id);
-        $order->total -= $product->price * $product->pivot->quantity;
+        $order->total -= $product->pivot->total;
         $order->save();
 
         $order = Order::with('products')->find($order->id);
@@ -101,6 +137,33 @@ class OrderController extends Controller
         return response()->json(compact('orders'));
     }
 
+    /**
+     * @OA\Post(
+     *      path="/cart/checkout",
+     *      operationId="checkoutOrder",
+     *      tags={"Cart"},
+     *      security={ {"sanctum": {} }},
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="orders", type="object", description="Array of orders."),
+     *          ),
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
     public function checkout(Request $request)
     {
         $user = $request->user();
@@ -108,12 +171,37 @@ class OrderController extends Controller
         $statusToBeProcessed = $status->where('name', 'To Be Process')->first();
         $statusInCart = $status->where('name', 'In Cart')->first();
 
-        $order = Order::where('user_id', $user->id)
+        $cartOrder = Order::where('user_id', $user->id)
             ->where('status_id', $statusInCart->id)
             ->first();
-        $order->status_id = $statusToBeProcessed;
-        $order->save();
 
+        $productsByShop = $cartOrder->products->groupBy('shop_id');
+
+        foreach ($productsByShop as $k => $shop) {
+            $newOrder = new Order();
+            $newOrder->user_id = $user->id;
+            $newOrder->shop_id = $shop[0]->shop_id;
+            $newOrder->status_id = $statusToBeProcessed->id;
+            $newOrder->total = 0;
+            $newOrder->save();
+
+            foreach ($shop as $product) {
+                $newOrder->products()->attach($product->id, [
+                    'shop_id' => $product->shop_id,
+                    'quantity' => $request->quantity,
+                    'price' => $product->price,
+                    'total' => $product->total
+                ]);
+                $newOrder->total += $product->total;
+                $newOrder->save();
+
+                $cartOrder->products()->detach($product->id);
+                $cartOrder->total -= $product->total;
+                $cartOrder->save();
+            }
+        }
+
+        $orders = Order::where('user_id', $user->id)->get();
         return response()->json(compact('orders'));
     }
 
